Responsive mobile optimization - overflow-x hidden fixes

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -106,6 +106,8 @@
     width: 200px;
     margin-left: 0;
     order: -1;
+    margin: 0 auto;
+    display: block;
   }
 }
 
@@ -132,5 +134,7 @@
   
   .home__gif {
     width: 160px;
+    margin: 0 auto;
+    display: block;
   }
 }
