--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,6 +15,13 @@
 html {
   font-family: 'Poppins', sans-serif;
   background-color: #0E1A31;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
