--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -5,6 +5,7 @@
   margin: 150px 0;
   position: relative;
   z-index: 1;
+  overflow-x: hidden;
 }
 
 /* Fondo con "GEMS INNOVATIONS" */
